# NekoAI

./: .env.example  .gitignore  AGENTS.md  BUGS.md  Cargo.toml  FEATURE.md  FEATURES.md  INSTRUCTION.md  README.md  docker-compose.yml  docker-settings.yml  justfile  rustfmt.toml
.config/: INSTRUCTION.md  config.json.example
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
config/: model.toml  settings.toml
crates/agent/: Cargo.toml
crates/agent/src/: context.rs  provider.rs  runtime.rs  session.rs
crates/cli/: Cargo.toml
crates/cli/src/: chat.rs  main.rs
crates/cli/src/commands/: start.rs
crates/config/: Cargo.toml
crates/config/src/: loader.rs
crates/discord/: Cargo.toml
crates/discord/src/: client.rs  command_router.rs  handler.rs  lib.rs
crates/discord/src/commands/: ask.rs  clear.rs  history.rs  mod.rs
crates/discord/src/commands/utils/: mod.rs  session_resolver.rs
crates/domain/: Cargo.toml
crates/domain/src/agent/: runtime.rs
crates/infra/: Cargo.toml
crates/infra/src/: logging.rs
crates/memory/: Cargo.toml
crates/memory/src/: embedding.rs  lib.rs  long_term.rs  mid_term.rs  short_term.rs  store.rs
crates/memory/src/vector_db/: inmemory.rs  mod.rs  qdrant.rs
crates/setup/src/: cli_fallback.rs  config_writer.rs  wizard.rs
crates/tools/: Cargo.toml
crates/tools/src/discord/: channel.rs  emoji.rs  error.rs  guild.rs  helpers.rs  invite.rs  member.rs  message.rs  mod.rs  role.rs  schedule.rs  thread.rs  voice.rs
docs/: architecture.md  index.md  workflow-cli.md  workflow-domain.md  workflow-infra.md  workflow-memory.md
docs/reviews/: agent.md  cli.md  config.md  discord.md  domain.md  infra.md  memory.md  tools.md
docs/workflow/: agent.md  cli.md  config.md  discord.md  domain.md  infra.md  memory.md  tools.md
nekoai-gui/: .gitignore  package.json
nekoai-gui/app/: root.tsx
nekoai-rs/: .gitignore  Cargo.toml  justfile
nekoai-rs/.config/: config.json.example  config.toml
nekoai-rs/agent/: Cargo.toml
nekoai-rs/agent/src/: context.rs  lib.rs  provider.rs  runtime.rs  session.rs
nekoai-rs/cli/: Cargo.toml
nekoai-rs/cli/src/: chat.rs  main.rs
nekoai-rs/cli/src/commands/: start.rs
nekoai-rs/config/: Cargo.toml
nekoai-rs/config/src/: lib.rs  loader.rs  mcp_config.rs
nekoai-rs/discord/: Cargo.toml
nekoai-rs/discord/src/: client.rs  command_router.rs  handler.rs  lib.rs
nekoai-rs/discord/src/commands/: ask.rs  clear.rs  mod.rs
nekoai-rs/discord/src/commands/utils/: session_resolver.rs
nekoai-rs/domain/: Cargo.toml
nekoai-rs/domain/src/agent/: session.rs
nekoai-rs/infra/: Cargo.toml
nekoai-rs/infra/src/: event_bus.rs  http_server.rs  lib.rs  metrics.rs  web_ui_agent.rs
nekoai-rs/memory/: Cargo.toml
nekoai-rs/memory/src/: embedding.rs  short_term.rs
nekoai-rs/memory/src/vector_db/: mod.rs  qdrant.rs
nekoai-rs/setup/: Cargo.toml
nekoai-rs/setup/src/: cli_fallback.rs  config_writer.rs  lib.rs  wizard.rs
nekoai-rs/tools/: Cargo.toml
nekoai-rs/tools/src/: code_exec.rs  lib.rs  read_file.rs  registry.rs  search.rs
nekoai-rs/tools/src/discord/: channel.rs  emoji.rs  error.rs  guild.rs  helpers.rs  invite.rs  member.rs  message.rs  mod.rs  permission.rs  role.rs  schedule.rs  thread.rs  voice.rs
nekoai-rs/tools/src/mcp/: client.rs  transport.rs
prompts/: system_prompt.txt
src/: lib.rs  main.rs
src/agent/: agent.rs  chat.rs  context.rs  mod.rs  prompts.rs
src/agent/tools/: get_channel_id_list_from_guild_id.rs  mod.rs  tools.rs
src/agent/tools/discord_tools/: channel.rs  emoji.rs  guild.rs  member.rs  role.rs
src/application/: mod.rs
src/application/chat/: chat_service.rs
src/application/command/: command_registry.rs  mod.rs
src/application/command/handlers/: chat.rs  health.rs
src/application/traits/: ai_client.rs
src/bot/: client.rs  handler.rs  mod.rs
src/bot/commands/: commands.rs  mod.rs
src/bot/commands/admin/: exec.rs  mod.rs  prompt.rs
src/bot/commands/general/: ping.rs
src/infrastructure/: mod.rs
src/infrastructure/ai/: rig_client.rs
src/infrastructure/ai/tools/: channel.rs  embed.rs  error.rs  member.rs  message.rs  mod.rs  moderation.rs  reminder.rs  role.rs  send_message.rs  server.rs  test.rs  voice.rs
src/infrastructure/config/: settings.rs
src/infrastructure/discord/: client.rs
src/infrastructure/observability/: logger.rs
src/infrastructure/store/: vector_store.rs
src/models/: error.rs  user.rs
src/presentation/: discord_handler.rs  handler.rs  mod.rs
src/presentation/command/: command_registry.rs
src/presentation/command/handlers/: chat.rs
src/presentation/events/: message_handler.rs  mod.rs  ready_handler.rs
src/services/: openai.rs
src/shared/: config.rs  discord_utils.rs  mod.rs  permission_checker.rs  rate_limiter.rs
src/utils/: config.rs
