[workspace]
members = [
    "crates/agent",
    "crates/cli",
    "crates/config",
    "crates/discord",
    "crates/domain",
    "crates/infra",
    "crates/memory",
#    "crates/setup",
    "crates/tools"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
nekoai-agent = { path = "crates/agent" }
nekoai-cli = { path = "crates/cli" }
nekoai-config = { path = "crates/config" }
nekoai-discord = { path = "crates/discord" }
nekoai-domain = { path = "crates/domain" }
nekoai-infra = { path = "crates/infra" }
nekoai-memory = { path = "crates/memory" }
#setup = { path = "crates/setup" }
nekoai-tools = { path = "crates/tools" }

anyhow = "1.0.102"
colored = "3.1.1"
chrono = "0.4.44"
dashmap = "7.0.0-rc2"
dialoguer = "0.12.0"
indicatif = "0.18.4"
rig-core = { version = "0.35.0", features = ["image", "derive"]}
rig-qdrant = "0.2.4"
serenity = { version = "0.12.5", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"