[workspace]
members = [
    "agent",
    "cli",
    "config",
    "discord",
    "domain",
    "infra",
    "memory",
    "setup",
    "tools"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
nekoai-agent = { path = "agent" }
nekoai-cli = { path = "cli" }
nekoai-config = { path = "config" }
nekoai-discord = { path = "discord" }
nekoai-domain = { path = "domain" }
nekoai-infra = { path = "infra" }
nekoai-memory = { path = "memory" }
nekoai-setup = { path = "setup" }
nekoai-tools = { path = "tools" }

anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
clap_derive = "4.6.1"
chrono = "0.4.44"
colored = "3.1.1"
config = "0.15.22"
dashmap = "7.0.0-rc2"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
futures = "0.3.32"
indicatif = "0.18.4"
poise = "0.6.2"
qdrant-client = "1.18.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rig = { package = "rig-core", version = "0.37.0", features = ["image", "derive"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = "0.10.3"
thiserror = "2.0.18"
serenity = { version = "0.12.5", features = ["full"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-retry = "0.3.1"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4"] }
