[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
domain = { workspace = true }
memory = { workspace = true }
rig-core = { workspace = true }
serenity = { workspace = true }
tracing = { workspace = true }

serde = { version = "1.0.228", features = ["derive"] }
