[package]
name = "nekoai-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
nekoai-config = { workspace = true }
nekoai-domain = { workspace = true }
nekoai-memory = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true }
tracing = { workspace = true }
