[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
config = { workspace = true }
dialoguer = { workspace = true }
discord = { workspace = true }
indicatif = { workspace = true }
infra = { workspace = true }
memory = { workspace = true }
#setup = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

clap = { version = "4.6.0", features = ["derive"] }
clap_derive = "4.6.0"