[package]
name = "nekoai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
nekoai-agent = { workspace = true }
nekoai-config = { workspace = true }
nekoai-discord = { workspace = true }
nekoai-infra = { workspace = true }
nekoai-memory = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
#setup = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

clap = { version = "4.6.0", features = ["derive"] }
clap_derive = "4.6.0"