[package]
name = "nekoai-discord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nekoai-agent = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
nekoai-domain = { workspace = true }
indicatif = { workspace = true }
serenity = { workspace = true }
tracing = { workspace = true }

poise = "0.6.2"