[package]
name = "memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
domain = { workspace = true }
rig-core = { workspace = true }
rig-qdrant = { workspace = true }
serenity = { workspace = true }
tracing = { workspace = true }
