[package]
name = "nekoai-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
nekoai-config = { workspace = true }
nekoai-domain = { workspace = true }
qdrant-client = "1.17.0"
rig-core = { workspace = true }
rig-qdrant = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.23.1", features = ["v4"] }
serenity = { workspace = true }
tracing = { workspace = true }
