[package]
name = "nekoai-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
