[package]
name = "nekoai-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
nekoai-config.workspace = true
nekoai-domain.workspace = true
nekoai-infra.workspace = true
nekoai-memory.workspace = true
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tracing.workspace = true
