[package]
name = "nekoai-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
nekoai-config = { workspace = true }
nekoai-domain = { workspace = true }
rig-core = { workspace = true }
rig-qdrant = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serenity = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
qdrant-client = { workspace = true }
async-trait = { workspace = true }
tokio-retry.workspace = true
