[package]
name = "nekoai-setup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
nekoai-config = { workspace = true }
dialoguer = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
