[package]
name = "nekoai-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rig-core.workspace = true
nekoai-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-retry.workspace = true
chrono.workspace = true
reqwest.workspace = true
scraper = "0.21"
