[package]
name = "nekoai-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nekoai-domain.workspace = true
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-retry.workspace = true
chrono.workspace = true
reqwest.workspace = true
scraper.workspace = true
